Update ASM, JarJar, and SJH to latest
Signed-off-by: SizableShrimp <sizableshrimp@sizableshrimp.me>